src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__help__tests__draw_blocks_help.snap
---
source: src/core/status/ui/draw_blocks/help.rs
expression: setup.terminal.backend()
---
"                                                                                       "
"                                                                                       "
"                                                                                       "
" ╭ 0.00.000 ─────────────────────────────────────────────────────────────────────────╮ "
" │                                                                                   │ "
" │                                 ____ _ _ _       _                                │ "
" │                                / ___| (_) | ____| |                               │ "
" │                               | |   | | | |/ / _` |                               │ "
" │                               | |___| | |   < (_| |                               │ "
" │                                \____|_|_|_|\_\__,_|                               │ "
" │                                                                                   │ "
" │                Local development environment management for Clikd                 │ "
" │                                                                                   │ "
" │ ( tab ) or ( shift+tab ) change panels                                            │ "
" │ ( ↑ ↓ ) or ( j k ) or ( Home End ) scroll vertically                              │ "
" │ ( ← → ) horizontal scroll across logs                                             │ "
" │ ( ctrl ) increase scroll speed, used in conjunction scroll keys                   │ "
" │ ( enter ) send docker container command                                           │ "
" │ ( e ) exec into a container                                                       │ "
" │ ( f ) force clear the screen & redraw the gui                                     │ "
" │ ( h ) toggle this help information - or click heading                             │ "
" │ ( s ) save logs to file                                                           │ "
" │ ( m ) toggle mouse capture - if disabled, text on screen can be selected & copied │ "
" │ ( F1 ) or ( / ) enter filter mode                                                 │ "
" │ ( # ) enter log search mode                                                       │ "
" │ ( 0 ) stop sort                                                                   │ "
" │ ( 1 - 9 ) sort by header - or click header                                        │ "
" │ ( - = ) change log section height                                                 │ "
" │ ( \ ) toggle log section visibility                                               │ "
" │ ( esc ) close dialog                                                              │ "
" │ ( q ) quit at any time                                                            │ "
" │                                                                                   │ "
" │        currently an early work in progress, all and any input appreciated         │ "
" │                         https://github.com/clikd-inc/cli                          │ "
" │                                                                                   │ "
" ╰───────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                       "
"                                                                                       "
"                                                                                       "
