src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__help__tests__draw_blocks_help_custom_keymap_one_definition.snap
---
source: src/core/status/ui/draw_blocks/help.rs
expression: setup.terminal.backend()
---
"                                                                                                  "
"      ╭ 0.00.000 ──────────────────────────────────────────────────────────────────────────╮      "
"      │                                                                                    │      "
"      │                                  ____ _ _ _       _                                │      "
"      │                                 / ___| (_) | ____| |                               │      "
"      │                                | |   | | | |/ / _` |                               │      "
"      │                                | |___| | |   < (_| |                               │      "
"      │                                 \____|_|_|_|\_\__,_|                               │      "
"      │                                                                                    │      "
"      │                 Local development environment management for Clikd                 │      "
"      │                                                                                    │      "
"      │ ( t ) select next panel                                                            │      "
"      │ ( u ) select previous panel                                                        │      "
"      │ ( o ) scroll list down by one                                                      │      "
"      │ ( s ) scroll list up by one                                                        │      "
"      │ ( p ) scroll list to end                                                           │      "
"      │ ( q ) scroll list to start                                                         │      "
"      │ ( h ) horizontal scroll logs right                                                 │      "
"      │ ( g ) horizontal scroll logs left                                                  │      "
"      │ ( Option ) increase scroll speed, used in conjunction scroll keys                  │      "
"      │ ( enter ) send docker container command                                            │      "
"      │ ( d ) exec into a container                                                        │      "
"      │ ( f ) force clear the screen & redraw the gui                                      │      "
"      │ ( 5 ) toggle this help information - or click heading                              │      "
"      │ ( m ) save logs to file                                                            │      "
"      │ ( 6 ) toggle mouse capture - if disabled, text on screen can be selected & copied  │      "
"      │ ( e ) enter filter mode                                                            │      "
"      │ ( 7 ) enter log search mode                                                        │      "
"      │ ( 4 ) reset container sorting                                                      │      "
"      │ ( z ) sort containers by name                                                      │      "
"      │ ( 1 ) sort containers by state                                                     │      "
"      │ ( 2 ) sort containers by status                                                    │      "
"      │ ( v ) sort containers by cpu                                                       │      "
"      │ ( y ) sort containers by memory                                                    │      "
"      │ ( w ) sort containers by id                                                        │      "
"      │ ( x ) sort containers by image                                                     │      "
"      │ ( 0 ) sort containers by rx                                                        │      "
"      │ ( 3 ) sort containers by tx                                                        │      "
"      │ ( i ) decrease log section height                                                  │      "
"      │ ( j ) increase log section height                                                  │      "
"      │ ( k ) toggle log section visibility                                                │      "
"      │ ( a ) close dialog                                                                 │      "
"      │ ( l ) quit at any time                                                             │      "
"      │                                                                                    │      "
"      │         currently an early work in progress, all and any input appreciated         │      "
"      │                          https://github.com/clikd-inc/cli                          │      "
"      │                                                                                    │      "
"      │                                                                                    │      "
"      ╰────────────────────────────────────────────────────────────────────────────────────╯      "
"                                                                                                  "
