src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__help__tests__draw_blocks_help_one_and_two_definitions.snap
---
source: src/core/status/ui/draw_blocks/help.rs
expression: setup.terminal.backend()
---
"                                                                                                              "
"        ╭ 0.00.000 ──────────────────────────────────────────────────────────────────────────────────╮        "
"        │                                                                                            │        "
"        │                                      ____ _ _ _       _                                    │        "
"        │                                     / ___| (_) | ____| |                                   │        "
"        │                                    | |   | | | |/ / _` |                                   │        "
"        │                                    | |___| | |   < (_| |                                   │        "
"        │                                     \____|_|_|_|\_\__,_|                                   │        "
"        │                                                                                            │        "
"        │                     Local development environment management for Clikd                     │        "
"        │                                                                                            │        "
"        │ ( t ) select next panel                                                                    │        "
"        │ ( u ) or ( U ) select previous panel                                                       │        "
"        │ ( o ) or ( O ) scroll list down by one                                                     │        "
"        │ ( s ) or ( S ) scroll list up by one                                                       │        "
"        │ ( p ) scroll list to end                                                                   │        "
"        │ ( q ) or ( Q ) scroll list to start                                                        │        "
"        │ ( h ) horizontal scroll logs right                                                         │        "
"        │ ( g ) or ( G ) horizontal scroll logs left                                                 │        "
"        │ ( Option ) increase scroll speed, used in conjunction scroll keys                          │        "
"        │ ( enter ) send docker container command                                                    │        "
"        │ ( d ) exec into a container                                                                │        "
"        │ ( f ) force clear the screen & redraw the gui                                              │        "
"        │ ( 5 ) toggle this help information - or click heading                                      │        "
"        │ ( m ) or ( M ) save logs to file                                                           │        "
"        │ ( 6 ) or ( # ) toggle mouse capture - if disabled, text on screen can be selected & copied │        "
"        │ ( e ) or ( E ) enter filter mode                                                           │        "
"        │ ( 8 ) enter log search mode                                                                │        "
"        │ ( 4 ) or ( 5 ) reset container sorting                                                     │        "
"        │ ( z ) sort containers by name                                                              │        "
"        │ ( 1 ) sort containers by state                                                             │        "
"        │ ( 2 ) or ( 7 ) sort containers by status                                                   │        "
"        │ ( v ) sort containers by cpu                                                               │        "
"        │ ( y ) or ( Y ) sort containers by memory                                                   │        "
"        │ ( w ) or ( W ) sort containers by id                                                       │        "
"        │ ( x ) sort containers by image                                                             │        "
"        │ ( 0 ) or ( 9 ) sort containers by rx                                                       │        "
"        │ ( 3 ) sort containers by tx                                                                │        "
"        │ ( i ) or ( I ) decrease log section height                                                 │        "
"        │ ( j ) increase log section height                                                          │        "
"        │ ( k ) or ( K ) toggle log section visibility                                               │        "
"        │ ( a ) or ( A ) close dialog                                                                │        "
"        │ ( l ) quit at any time                                                                     │        "
"        │                                                                                            │        "
"        │             currently an early work in progress, all and any input appreciated             │        "
"        │                              https://github.com/clikd-inc/cli                              │        "
"        │                                                                                            │        "
"        │                                                                                            │        "
"        ╰────────────────────────────────────────────────────────────────────────────────────────────╯        "
"                                                                                                              "
